--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -9,15 +9,95 @@
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--Great Idea needs a fav icon-->
+  <link rel="shortcut icon" href="img/favicon.ico" />
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
-  <body>
+<body>
+  <header>
+    <div class="floatnav">
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="product.html">Product</a>
+        <a href="vision.html">Vision</a>
+        <a href="features.html">Features</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+      <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </div>
+
+    <section class="subheader">
+      <div>
+        <h1>Innovation
+            On
+            Demand</h1>
+            <a href="contact.html">
+              <p>Get Started</p><!-- should be a <span> but this excersise reqyuiered display: block; to be set by type rather than css-->
+            </a>
+      </div>
+
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </section>
+  </header>
+
+  <section>
+    <div  class="area1">
+      <a href="features.html">
+        <div>
+          <h2>Features</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.<p>
+        </div>
+      </a>
+      <a href="about.html">
+        <div>
+          <h2>About</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </a>
+    </div>
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+    <div  class="area2">
+      <a href="services.html">
+        <div>
+          <h3>Services</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </a>
+      <a href="product.html">
+        <div>
+          <h3>Product</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </a>
+      <a href="vision.html">
+        <div>
+          <h3>Vision</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    <h4>Contact</h4>
+    <address>
+    <p>123 Way 456 Street
+    Somewhere, USA</p>
+    <span>1 (888) 888-8888</span>
+    <span>sales@greatidea.io</span>
+    </address>
+
+    <p class="copyright">&copy;Copyright Great Idea! 2018</p>
+  </footer>
+
+</body>
+
 </html>
