--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -87,6 +87,26 @@
     </div>
   </section>
 
+  <footer>
+    <div class="itembox">
+      <h3>Some Facts About Our Services</h3>
+
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+
+      <ul>
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ul>
+    </div>
+
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+    <p class="copyright">&copy;Copyright Great Idea! 2018</p>
+
+  </footer>
 
 
 
@@ -95,20 +115,8 @@
 
 
 
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
 
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
 
 </body>
 
