--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -89,20 +89,23 @@
 
   <footer>
     <div class="itembox">
-      <h3>Some Facts About Our Services</h3>
+      <div class="arealeft">
+        <h3>Some Facts About Our Services</h3>
 
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <ul>
-        <li>Awesome thing</li>
-        <li>Amazing thing</li>
-        <li>Cool thing</li>
-        <li>Great thing</li>
-      </ul>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+      </div>
+      <div class="arearight">
+          <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+      </div>
     </div>
-
-    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
     <p class="copyright">&copy;Copyright Great Idea! 2018</p>
 
