--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -9,6 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+<!--  <link rel="stylesheet" media="(min-width: 501px)" href="css/index.css">
+  <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css">-->
+
+  <!--Great Idea needs a fav icon-->
+  <link rel="shortcut icon" href="img/favicon.ico" />
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -43,7 +49,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
     <div class="itembox">
       <h2>UX / UI</h2>
@@ -51,7 +57,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
     <div class="itembox">
       <h2>Digital Marketing</h2>
@@ -59,7 +65,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
     <div class="itembox">
       <h2>Web Development</h2>
@@ -67,7 +73,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
     <div class="itembox">
       <h2>iOS Development</h2>
@@ -75,7 +81,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
     <div class="itembox">
       <h2>Android Development</h2>
@@ -83,7 +89,7 @@
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
       eleifend. Mauris euismod facilisis iaculis.</p>
 
-      <span>Learn More</span>
+      <a href="#">Learn More</a>
     </div>
   </section>
 
