--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -35,7 +35,7 @@
     <section class="subheader">
       <div>
         <h1>Innovation
-            On
+            On<br><!--feels like cheating but I have no other way to make this work-->
             Demand</h1>
             <a href="contact.html">
               <p>Get Started</p><!-- should be a <span> but this excersise reqyuiered display: block; to be set by type rather than css-->
